# sdk

./: .gitignore  Makefile.am  configure.ac  index.md
bindings/: megaapi.i
bindings/ios/: MEGASdk.h  MEGASdk.mm
bindings/ios/MEGASDK.xcodeproj/: project.pbxproj
bindings/java/contrib/vs2015/: MEGAdll.vcxproj
bindings/js/: .gitignore  fix_callbacks.patch  fix_callbacks_and_enums.patch  glue_wrapper.cpp  include.am  io.js  library.js  megaapi.idl  postfix.js  prefix.js  webidl_binder.py.patch
bindings/js/patches/: webidl_binder.py.patch
bindings/js/patches/cryptopp/: osrng.cpp.diff  osrng.h.diff
bindings/qt/: QTMegaEvent.h  QTMegaListener.cpp  QTMegaListener.h  QTMegaSyncListener.cpp  QTMegaSyncListener.h  sdk.pri
bindings/wp8/vs2015/: mega.vcxproj
contrib/QtCreator/: megacli.files
contrib/cmake/: CMakeLists.txt
examples/: include.am  megacli.cpp
examples/js/: test.cpp
examples/js/term/: index.html  term.js
include/: Makefile.am  mega.h  megaapi.h  megaapi_impl.h
include/mega/: command.h  filesystem.h  filter.h  http.h  megaapp.h  megaclient.h  node.h  sync.h  timedcache.h  transfer.h  transferslot.h  types.h  utils.h
include/mega/js/: megaconsolewaiter.h  megafs.h  meganet.h  megasys.h  megawaiter.h
include/mega/posix/: megafs.h  meganet.h
include/mega/win32/: megafs.h
m4/: curlchk.m4  megasdk_cares.m4  megasdk_cryptopp.m4  megasdk_curl.m4  megasdk_db.m4  megasdk_examples.m4  megasdk_freeimage.m4  megasdk_java.m4  megasdk_js.m4  megasdk_php.m4  megasdk_python.m4  megasdk_sodium.m4  megasdk_ssl.m4  megasdk_sync.m4  megasdk_winhttp.m4  megasdk_zlib.m4
src/: commands.cpp  file.cpp  filesystem.cpp  filter.cpp  heartbeats.cpp  http.cpp  include.am  megaapi.cpp  megaapi_impl.cpp  megaclient.cpp  node.cpp  sync.cpp  timedcache.cpp  transfer.cpp  transferslot.cpp  treeproc.cpp  utils.cpp
src/crypto/: cryptopp.cpp
src/js/: consolewaiter.cpp  fs.cpp  net.cpp  waiter.cpp
src/posix/: fs.cpp  net.cpp
src/win32/: consolewaiter.cpp  fs.cpp
tests/integration/: Sync_test.cpp
tests/unit/: SpeedController_test.cpp  TimedCache_test.cpp
